--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="heading">
 		<img src="images/curry.png">
-		<h1>Food Planer</h1>
+		<h1>FoodCook Planner</h1>
 		<a href="credits.html">Credits</a>
 		<a href="feedback.html">Feedback</a>
 	</div>
